--- a/AccessDBTree/TreeView.xaml
+++ b/AccessDBTree/TreeView.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tv="clr-namespace:AccessDBTree"
-    Height="300" Width="300">
+    Height="300" Width="300" Loaded="UserControl_Loaded">
     <UserControl.Resources>
         <tv:NameConverter x:Key="nameConvert" />
         <HierarchicalDataTemplate x:Key="NodeTemplate">
