--- a/trunk/AccessDBTree/TreeView.xaml
+++ b/trunk/AccessDBTree/TreeView.xaml
@@ -2,11 +2,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tv="clr-namespace:AccessDBTree"
-    Height="300" Width="300" Loaded="UserControl_Loaded">
+    Height="500" Width="600" Loaded="UserControl_Loaded">
     <UserControl.Resources>
         <tv:NameConverter x:Key="nameConvert" />
         <HierarchicalDataTemplate x:Key="NodeTemplate">
-            <TextBox x:Name="tb"/>
+            <TextBlock x:Name="tb"/>
             <HierarchicalDataTemplate.ItemsSource>
                 <Binding XPath="child::node()" />
             </HierarchicalDataTemplate.ItemsSource>
@@ -26,11 +26,21 @@
 
     </UserControl.Resources>
     <Grid>
+        <Button HorizontalAlignment="Right" Margin="0,239,53,221" Name="button2" Width="122" Click="button2_Click">收起</Button>
+        <Button HorizontalAlignment="Right" Margin="0,0,12,163" Name="button1" Width="136" Click="button1_Click" Height="38" VerticalAlignment="Bottom">kkkkkkkkkkkkkk</Button>
         <TreeView x:Name="treeTest"  ItemTemplate= "{StaticResource NodeTemplate}" SelectedItemChanged="treeTest_SelectedItemChanged" HorizontalAlignment="Left" Width="144" />
-        <Button Margin="0,20,12,0" HorizontalAlignment="Right" Width="118" Height="32" VerticalAlignment="Top" Click="Button_Click" />
+        <Button Content="添加"  Margin="0,20,12,0" HorizontalAlignment="Right" Width="118" Height="32" VerticalAlignment="Top" Click="Button_Click" />
         <TextBox x:Name="newName" Margin="0,104,12,0" HorizontalAlignment="Right" Width="106" Height="30" VerticalAlignment="Top" />
-        <Button Height="32" HorizontalAlignment="Right" Margin="0,0,12,102" VerticalAlignment="Bottom" Width="118" Click="Button_Click_1" />
+        <Button Background="Red"  Content="删除"  Height="32" HorizontalAlignment="Right" Margin="0,0,12,102" VerticalAlignment="Bottom" Width="118" Click="Button_Click_1" />
         <Button Height="32" HorizontalAlignment="Right" Margin="0,0,12,56" VerticalAlignment="Bottom" Width="118" Content="插入File" Click="Button_Click_2" />
         <Button Height="32" HorizontalAlignment="Right" Margin="0,0,12,12" VerticalAlignment="Bottom" Width="118" Click="Button_Click_3">读取File</Button>
+        <ListBox  Width="150"  Name="lbBooks" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Path=Name}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
     </Grid>
 </UserControl>
